--- a/index.html
+++ b/index.html
@@ -4,11 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site Bloqueado pelo Governo</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div style="text-align: center; padding: 100px;">
+    <style>
+            *{
+                font-family: 'Open Sans', sans-serif;
+                font-family: 'Roboto', sans-serif;
+            }
+
+            body{
+                background-image: url(background.png);
+                background-size: cover;
+                background-attachment: fixed;
+                background-repeat: no-repeat;
+            }
+
+            .logo-area{
+                width: 100%;
+                display:flex;
+                justify-content: center;
+            }
+
+            .logo-area img{
+                margin-top: 50px;
+                width: 200px;
+            }
+    </style>
+    <div class="logo-area">
+        <img src="LogoMGP.png">
+    </div>
+    <div style="text-align: center; padding:30px;">
         <h1>Este site foi bloqueado por determinação Judicial.</h1>
-        <p>Em cumprimento a ordem Judicial a MGP esta bloqueando o acesso ao dominio solicitado.</p>
+        <p>Em cumprimento a <strong>ordem Judicial</strong> a MGP esta <strong>bloqueando o acesso ao dominio solicitado</strong>.</p>
         <p>Em caso de duvidas entrar em contato com os seguintes nucleos de Telecomunicações no Brasil.</p>
         <p>Agencia Nacional de Telecomunicações - ANATEL</p>
         <p>Núcleo de Investigações de Crimes Cibernéticos – NICC – CyberGaeco</p>
